б4н69ра пришел порядок навел ааааа нет б4н69р4 убийца и националист

--- a/parkingapp/templates/dash_base.html
+++ b/parkingapp/templates/dash_base.html
@@ -18,7 +18,9 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" type="image/x-icon" href="{% static 'fav.ico' %}">
   <style>
-    .card {}
+    body {
+      overflow-x: hidden;
+    }
 
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -35,6 +37,7 @@
 
       .sidebar {
         height: 100vh;
+        position: fixed;
       }
     }
 
