--- a/parkingapp/templates/enter.html
+++ b/parkingapp/templates/enter.html
@@ -22,7 +22,7 @@
             <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Войти</button>
             <div class="text-center">
               <small class="text-danger mx-auto">{{ error }}</small>
-              <small>Ещё нет аккаунта? <a href="{% url 'parkingapp:sign' %}">Зарегесрируйтесь</a></small>
+              <small>Ещё нет аккаунта? <a href="{% url 'parkingapp:sign' %}">Зарегистрируйтесь</a></small>
             </div>
           </form>
         </div>
