--- a/parkingapp/templates/info.html
+++ b/parkingapp/templates/info.html
@@ -16,7 +16,7 @@
       <p>При регистрации необходимо будет предоставить номер телефона, номер автомобиля и 4 последние цифры банковской карты, с которой будет производится оплата парковки.</p>
       <ul class="list-unstyled ps-0">
         <li>
-          <a class="icon-link mb-1" href="https://github.com/twbs/examples/tree/main/icons-font" rel="noopener"
+          <a class="icon-link mb-1" href="{% url 'parkingapp:sign' %}" rel="noopener"
             target="_blank">
             Зарегистрироваться
           </a>
@@ -29,12 +29,12 @@
       <p>Пользователям ЕСП предоставляются льготы на аннулирование стоимости парковочной сессии в местах работы, учебы, проживания, а также возле больниц, МФЦ, МВД и так далее...</p>
       <ul class="list-unstyled ps-0">
         <li>
-          <a class="icon-link mb-1" href="/docs/5.3/getting-started/introduction/">
+          <a class="icon-link mb-1" href="">
             На какие парковки действуют льготы?
           </a>
         </li>
         <li>
-          <a class="icon-link mb-1" href="/docs/5.3/getting-started/webpack/">
+          <a class="icon-link mb-1" href="">
             Где можно получить льготу?
           </a>
         </li>
@@ -46,7 +46,7 @@
       <p>Начните работу с ЕСП, для увеличения потока ТС на вашей парковке.</p>
       <ul class="list-unstyled ps-0">
         <li>
-          <a class="icon-link mb-1" href="/docs/5.3/getting-started/introduction/">
+          <a class="icon-link mb-1" href="">
             Связаться
           </a>
         </li>
@@ -57,22 +57,22 @@
       <h2 class="text-body-emphasis">Контакты</h2>
       <ul class="list-unstyled ps-0">
         <li>
-          <a class="icon-link mb-1" href="/docs/5.3/getting-started/introduction/">
+          <a class="icon-link mb-1" href="">
             Служба поддержки
           </a>
         </li>
         <li>
-          <a class="icon-link mb-1" href="/docs/5.3/getting-started/introduction/">
+          <a class="icon-link mb-1" href="">
             Горячая линия
           </a>
         </li>
         <li>
-          <a class="icon-link mb-1" href="/docs/5.3/getting-started/introduction/">
+          <a class="icon-link mb-1" href="">
             Министерство цифровизации
           </a>
         </li>
         <li>
-          <a class="icon-link mb-1" href="/docs/5.3/getting-started/introduction/">
+          <a class="icon-link mb-1" href="">
             Разработчик
           </a>
         </li>
