--- a/parkingapp/templates/signadmin.html
+++ b/parkingapp/templates/signadmin.html
@@ -19,9 +19,8 @@
           <label for="firstName" class="form-label">Пароль</label>
           {{ form.password }}
         </div>
-
         <div class="col-sm-6">
-          <label for="lastName" class="form-label">Подтвердите пароль</label>
+          <label for="firstName" class="form-label">Пароль ещё раз</label>
           {{ form.password2 }}
         </div>
       </div>
